// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Quote.vue highlight like button if user has liked 1`] = `
<div class="quote">
  <div class="quote__body">
    <ul class="list-stacked list-stacked--divided">
      <li><span><span class="quote__participant">Watson:</span> excellent!</span></li>
      <li><span><span class="quote__participant">Sherlock:</span> elementary.</span></li>
    </ul>
  </div>
  <ul class="quote__meta list-inline list-inline--small list-inline--center">
    <li><strong>Sherlock</strong> <span>
        à <strong>Watson</strong></span>
      le&nbsp;<router-link-stub to="/quote/1" class="text-nowrap">1 janvier 2018</router-link-stub>
    </li>
    <li><button type="button" title="Je n’aime plus" class="btn btn--bare feeling feeling--liked">
        <heartalticon-stub class="feeling__icon icon"></heartalticon-stub>
        1
      </button></li>
    <li><button type="button" title="J’aime pas" class="btn btn--bare feeling">
        <poopicon-stub class="feeling__icon icon"></poopicon-stub>
        0
      </button></li>
  </ul>
</div>
`;

exports[`Quote.vue renders quote 1`] = `
<div class="quote">
  <div class="quote__body">
    <ul class="list-stacked list-stacked--divided">
      <li><span><span class="quote__participant">Watson:</span> excellent!</span></li>
      <li><span><span class="quote__participant">Sherlock:</span> elementary.</span></li>
    </ul>
  </div>
  <ul class="quote__meta list-inline list-inline--small list-inline--center">
    <li><strong>Sherlock</strong> <span>
        à <strong>Watson</strong></span>
      le&nbsp;<router-link-stub to="/quote/1" class="text-nowrap">1 janvier 2018</router-link-stub>
    </li>
    <li><button type="button" title="J’aime" class="btn btn--bare feeling">
        <hearticon-stub class="feeling__icon icon"></hearticon-stub>
        0
      </button></li>
    <li><button type="button" title="J’aime pas" class="btn btn--bare feeling">
        <poopicon-stub class="feeling__icon icon"></poopicon-stub>
        0
      </button></li>
  </ul>
</div>
`;
